test/files/neg/implicit-ambiguous-val.check
implicit-ambiguous-val.scala:16: error: unexpected string
  meh("")
     ^
one error found
